# gpmimerghh-virtualizarr-data-pipeline

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  design.md  package.json  pyproject.toml  scaling-design.md  scaling.md  validate-build.ipynb  validate_build.ipynb
cdk/: app.py  settings.py  stack.py
cdk/stack_constructs/: __init__.py  aws_batch_infra.py  aws_batch_job.py
docs/: architecture.excalidraw
lambda/garbage_collect/: Dockerfile  handler.py  pyproject.toml
lambda/initialize/: Dockerfile  handler.py  pyproject.toml
lambda/process_messages/: Dockerfile  handler.py  pyproject.toml
lambda/virtualizarr-processor/: pyproject.toml
lambda/virtualizarr-processor/virtualizarr_processor/: helpers.py  processor.py  typing.py
scripts/: dispatch.py  setup.sh
tests/: conftest.py  hdf5_fixtures.py  test_dispatch.py  test_example.py  test_handler.py  test_helpers.py  test_initialize_repo.py  test_process_file.py  test_processor.py
tests/integration/: test_handler_integration.py
