[project]
name = "initialize-lambda"
version = "0.1.0"
description = "Lambda function to process file notifications"
requires-python = ">=3.11"

dependencies = [
    "aws-lambda-powertools>=2.30.0",
    "aws-xray-sdk",
    "boto3>=1.34.0",
    "virtualizarr-processor",
    "icechunk",
]

[tool.uv.sources]
virtualizarr-processor = { path = "../virtualizarr-processor" }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
