[project]
name = "virtualizarr-processor"
version = "0.1.0"
description = "Module for ingesting virtualizarr data to Icechunk"
requires-python = ">=3.11"
dependencies = [
    "icechunk",
    "virtualizarr",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["virtualizarr_processor"]
