[project]
name = "virtualizarr-processor"
version = "0.1.0"
description = "Module for ingesting virtualizarr data to Icechunk"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "h5py",
    "icechunk>=2.0.5",
    "virtualizarr[hdf] @ git+https://github.com/zarr-developers/virtualizarr.git@fix/problem_fillvalues",
    "obspec-utils",
    "cftime"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["virtualizarr_processor"]

[tool.hatch.metadata]
allow-direct-references = true
